Code smell
Signed-off-by: José Antonio Marqués <marquesja@aia.es>